# stimulator

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/stimulator/: cli.py  discord.py  discord_scraper.py  pc_model.py  utils.py
